--- a/index.ipynb
+++ b/index.ipynb
@@ -305,9 +305,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "<folium.folium.Map at 0x7f31c849afd0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
